tests/ui/parser/issues/issue-103451.rs
struct R { }
//~vv ERROR this file contains an unclosed delimiter
struct S {
    x: [u8; R
